[레거시 코드 리팩터링 - 2단계] 홍고(홍여진) 미션 제출합니다. (#640)
* refactor: Price VO 생성

* refactor: Menu에 검증 로직 추가

* refactor: Order 생성시 예외 추가

* refactor: 픽스처 연관관계 설정 방법 수정

* refactor: MenuRequest DTO 생성

* refactor: OrderRequest DTO 생성

* refactor: MenuGroupRequest DTO 생성

* refactor: setter 제거

* refactor: ProductRequest DTO 생성

* refactor: TableGroupRequest DTO 생성

* refactor: OrderTable DTO 생성

* refactor: 동등성 비교 로직 추가

* refactor: 메뉴 검증 로직 분리

* refactor: 주문 검증 로직 분리

* refactor: 손님수를 VO로 분리

* refactor: 테이블 그룹 검증 로직 분리

* style: 코드 스타일 적용

* refactor: 예외 메시지 추가

* refactor: MenuProductRequest 추가

* refactor: OrderLineItemRequest 추가

* refactor: menuId 필드 제거

* refactor: orderId 필드 제거

* refactor: NumberOfGuests VO 생성

* refactor: 일급컬렉션 생성

* refactor: JpaRepository를 사용하게 변경

* refactor: TableGroupValidator의 로직을 OrderTables로 이동

* refactor: 도메인에서 도메인 서비스를 사용하게 변경

* refactor: 이벤트를 발행해서 주문 테이블의 empty가 변경되는 것을 검증하게 변경

* refactor: 이벤트 리스너의 검증 로직을 Order로 이동

* refactor: TableGroup을 해제할 때 검증 이벤트를 발행하게 변경

* refactor: 테이블 그룹 해제 이벤트 생성