@@ -7,13 +7,16 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.dao.TableGroupDao;
 import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.TableGroup;
+import kitchenpos.domain.repository.OrderRepository;
+import kitchenpos.domain.repository.OrderTableRepository;
+import kitchenpos.domain.repository.TableGroupRepository;
+import kitchenpos.dto.TableGroupRequest;
+import kitchenpos.exception.OrderTableUpdateException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -26,19 +29,23 @@ class TableGroupServiceTest {
     private TableGroupService tableGroupService;
 
     @Autowired
-    private OrderTableDao orderTableDao;
+    private OrderTableRepository orderTableRepository;
 
     @Autowired
-    private TableGroupDao tableGroupDao;
+    private TableGroupRepository tableGroupRepository;
 
     @Autowired
-    private OrderDao orderDao;
+    private OrderRepository orderRepository;
 
     private List<OrderTable> dummyTables;
+    private List<Long> dummyTableIds;
 
     @BeforeEach
     void setUp() {
-        dummyTables = List.of(orderTableDao.save(new OrderTable()), orderTableDao.save(new OrderTable()));
+        dummyTables = List.of(orderTableRepository.save(new OrderTable()), orderTableRepository.save(new OrderTable()));
+        dummyTableIds = dummyTables.stream()
+                .map(OrderTable::getId)
+                .collect(Collectors.toList());
     }
 
     @Nested
@@ -47,19 +54,19 @@ class TableGroupServiceTest {
         @Test
         void 주문_테이블_그룹을_생성한다() {
             // given
-            final TableGroup tableGroup = new TableGroup(dummyTables);
+            dummyTables.forEach(table -> table.changeEmpty(true));
+            orderTableRepository.saveAll(dummyTables);
+            final TableGroupRequest request = new TableGroupRequest(dummyTableIds);
 
             // when
-            final TableGroup createdTableGroup = tableGroupService.create(tableGroup);
+            final TableGroup createdTableGroup = tableGroupService.create(request);
 
             // then
             assertSoftly(
                     softly -> {
                         softly.assertThat(createdTableGroup.getId()).isNotNull();
                         softly.assertThat(createdTableGroup.getCreatedDate()).isNotNull();
-                        softly.assertThat(createdTableGroup.getOrderTables())
-                                .extracting(OrderTable::getTableGroupId)
-                                .containsExactly(createdTableGroup.getId(), createdTableGroup.getId());
+                        softly.assertThat(createdTableGroup.getOrderTables());
                         softly.assertThat(createdTableGroup.getOrderTables())
                                 .extracting(OrderTable::isEmpty)
                                 .containsExactly(false, false);
@@ -70,20 +77,20 @@ class TableGroupServiceTest {
         @Test
         void 주문_테이블_그룹이_비어있으면_예외가_발생한다() {
             // given
-            final TableGroup tableGroup = new TableGroup(Collections.emptyList());
+            final TableGroupRequest request = new TableGroupRequest(Collections.emptyList());
 
             // when & then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 포함된_주문_테이블이_2개미만이면_예외가_발생한다() {
             // given
-            final TableGroup tableGroup = new TableGroup(List.of(dummyTables.get(0)));
+            final TableGroupRequest request = new TableGroupRequest(List.of(dummyTableIds.get(0)));
 
             // when & then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -91,47 +98,46 @@ class TableGroupServiceTest {
         void 존재하지_않는_주문_테이블이_포함되어_있으면_예외가_발생한다() {
             // given
             final long nonExistTableId = 99L;
-            final OrderTable invalidTable = new OrderTable(nonExistTableId, 1L, 5, true);
-            final TableGroup tableGroup = new TableGroup(List.of(dummyTables.get(0), invalidTable));
+            final OrderTable invalidTable = new OrderTable(nonExistTableId, 5, true);
+            final TableGroupRequest request = new TableGroupRequest(
+                    List.of(dummyTableIds.get(0), nonExistTableId));
 
             // when & then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 중복인_주문_테이블이_포함되어_있으면_예외가_발생한다() {
             // given
-            final TableGroup tableGroup = new TableGroup(List.of(dummyTables.get(0), dummyTables.get(0)));
+            final TableGroupRequest request = new TableGroupRequest(
+                    List.of(dummyTableIds.get(0), dummyTableIds.get(0)));
 
             // when & then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 주문_가능한_주문_테이블이_포함되어_있으면_예외가_발생한다() {
             // given
-            final OrderTable invalidTable = new OrderTable();
-            invalidTable.setEmpty(false);
-            final TableGroup tableGroup = new TableGroup(LocalDateTime.now(), Collections.emptyList());
-            relationTablesWithTableGroup(tableGroup, List.of(dummyTables.get(0), invalidTable));
+            final OrderTable invalidTable = orderTableRepository.save(new OrderTable(null, 5, false));
+            final TableGroupRequest request = new TableGroupRequest(
+                    List.of(dummyTableIds.get(0), invalidTable.getId()));
 
             // when & then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
         void 이미_다른_그룹에_속한_주문_테이블이_포함되어_있으면_예외가_발생한다() {
             // given
-            final TableGroup otherTableGroup = new TableGroup(LocalDateTime.now(), Collections.emptyList());
-            final OrderTable invalidTable = new OrderTable();
-            relationTablesWithTableGroup(otherTableGroup, List.of(invalidTable));
-            final TableGroup tableGroup = new TableGroup(List.of(dummyTables.get(0), invalidTable));
+            tableGroupRepository.save(new TableGroup(LocalDateTime.now(), dummyTables));
+            final TableGroupRequest request = new TableGroupRequest(dummyTableIds);
 
             // when & then
-            assertThatThrownBy(() -> tableGroupService.create(tableGroup))
+            assertThatThrownBy(() -> tableGroupService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
     }
@@ -142,14 +148,13 @@ class TableGroupServiceTest {
         @Test
         void 주문_테이블_그룹을_해제한다() {
             // given
-            final TableGroup tableGroup = new TableGroup(LocalDateTime.now(), Collections.emptyList());
-            relationTablesWithTableGroup(tableGroup, dummyTables);
+            final TableGroup tableGroup = tableGroupRepository.save(new TableGroup(LocalDateTime.now(), dummyTables));
 
             // when
             tableGroupService.ungroup(1L);
 
             // then
-            final List<OrderTable> tables = orderTableDao.findAllByIdIn(List.of(
+            final List<OrderTable> tables = orderTableRepository.findAllByIdIn(List.of(
                     dummyTables.get(0).getId(),
                     dummyTables.get(1).getId())
             );
@@ -168,44 +173,29 @@ class TableGroupServiceTest {
         @Test
         void 주문_상태가_식사중인_주문_테이블이_포함되어_있으면_예외가_발생한다() {
             // given
-            final OrderTable invalidTable = orderTableDao.save(new OrderTable(null, 0, false));
-            orderDao.save(new Order(invalidTable.getId(), OrderStatus.MEAL.name(), LocalDateTime.now(),
-                    Collections.emptyList()));
-            final TableGroup tableGroup = new TableGroup(LocalDateTime.now(), Collections.emptyList());
-            relationTablesWithTableGroup(tableGroup, List.of(dummyTables.get(0), invalidTable));
+            final OrderTable invalidTable = orderTableRepository.save(new OrderTable(null, 0, true));
+            final TableGroup tableGroup = tableGroupService.create(
+                    new TableGroupRequest(List.of(invalidTable.getId(), dummyTables.get(0).getId())));
+            orderRepository.save(new Order(invalidTable.getId(), OrderStatus.MEAL.name(), LocalDateTime.now(),
+                    List.of(new OrderLineItem(null, 1L, 1))));
 
             // when & then
-            assertThatThrownBy(() -> tableGroupService.ungroup(1L))
-                    .isInstanceOf(IllegalArgumentException.class);
+            assertThatThrownBy(() -> tableGroupService.ungroup(tableGroup.getId()))
+                    .isInstanceOf(OrderTableUpdateException.class);
         }
 
         @Test
         void 주문_상태가_조리중인_주문_테이블이_포함되어_있으면_예외가_발생한다() {
             // given
-            final OrderTable invalidTable = orderTableDao.save(new OrderTable(null, 0, false));
-            orderDao.save(new Order(invalidTable.getId(), OrderStatus.COOKING.name(), LocalDateTime.now(),
-                    Collections.emptyList()));
-            final TableGroup tableGroup = new TableGroup(LocalDateTime.now(), Collections.emptyList());
-            relationTablesWithTableGroup(tableGroup, List.of(dummyTables.get(0), invalidTable));
+            final OrderTable invalidTable = orderTableRepository.save(new OrderTable(null, 0, true));
+            final TableGroup tableGroup = tableGroupService.create(
+                    new TableGroupRequest(List.of(invalidTable.getId(), dummyTables.get(0).getId())));
+            orderRepository.save(new Order(invalidTable.getId(), OrderStatus.COOKING.name(), LocalDateTime.now(),
+                    List.of(new OrderLineItem(null, 1L, 1))));
 
             // when & then
             assertThatThrownBy(() -> tableGroupService.ungroup(1L))
-                    .isInstanceOf(IllegalArgumentException.class);
+                    .isInstanceOf(OrderTableUpdateException.class);
         }
-    }
-
-    void relationTablesWithTableGroup(final TableGroup tableGroup, final List<OrderTable> orderTables) {
-        if (!tableGroup.getOrderTables().isEmpty()) {
-            throw new IllegalArgumentException();
-        }
-        final List<OrderTable> createdOrderTables = orderTables.stream()
-                .map(orderTable -> orderTableDao.save(orderTable))
-                .collect(Collectors.toList());
-        tableGroup.setOrderTables(createdOrderTables);
-        final long tableGroupId = tableGroupDao.save(tableGroup).getId();
-        createdOrderTables.forEach(table -> {
-            table.setTableGroupId(tableGroupId);
-            orderTableDao.save(table);
-        });
     }
 }
